--- a/Frontend/src/translations/en.json
+++ b/Frontend/src/translations/en.json
@@ -61,6 +61,13 @@
         "name_8": "Associate Professor, Dr. Pham Van Tan",
         "sub_8": "Ophthalmology"
     },
+    "handbook":{
+        "title": "Handbook",
+        "handbook_1": "Lesson 1: 3 lessons after the journey to conquer Ta Xua",
+        "handbook_2": "Lesson 2: 3 things that make Ta Xua climbing arc interesting",
+        "handbook_3": "Lesson 3: Companions on the journey to climb Ta Xua peak",
+        "handbook_4": "Lesson 4: Descending the mountain and ending"
+    },
     "common": {
         "btn_content": "See more",
         "add": "Add",
