--- a/Frontend/src/translations/vi.json
+++ b/Frontend/src/translations/vi.json
@@ -62,6 +62,13 @@
         "name_8": "Phó Giáo Sư, Tiến sĩ Phạm Văn Tần",
         "sub_8": "Chuyên khoa Mắt"
     },
+    "handbook":{
+        "title": "Cẩm nang",
+        "handbook_1": "Bài 1: 3 bài học sau hành trình chinh phục Tà Xùa",
+        "handbook_2": "Bài 2: 3 điều tạo nên điều thú vị của cung leo núi Tà Xùa",
+        "handbook_3": "Bài 3: Những người đồng hành trong hành trình leo đỉnh Tà Xùa",
+        "handbook_4": "Bài 4: Xuống núi và kết thúc"
+    },
     "common": {
         "btn_content": "Xem thêm",
         "add": "Thêm",
