Import video and sticky header

--- a/Frontend/src/translations/en.json
+++ b/Frontend/src/translations/en.json
@@ -69,6 +69,7 @@
         "handbook_4": "Lesson 4: Descending the mountain and ending"
     },
     "common": {
+        "social": "Social Media",
         "btn_content": "See more",
         "add": "Add",
         "edit": "Edit",
