--- a/Frontend/src/translations/vi.json
+++ b/Frontend/src/translations/vi.json
@@ -71,6 +71,7 @@
     },
     "common": {
         "btn_content": "Xem thêm",
+        "social": "Truyền thông xã hội",
         "add": "Thêm",
         "edit": "Sửa",
         "delete": "Xóa",
