Create User through Redux

--- a/Frontend/src/translations/en.json
+++ b/Frontend/src/translations/en.json
@@ -112,6 +112,6 @@
         "role": "Role",
         "image": "Avatar",
         "save": "Save information",
-        "upload-image":"upload image"
+        "upload-image":"Upload image"
     }
 }
