Get all uses list redux

--- a/Frontend/src/translations/en.json
+++ b/Frontend/src/translations/en.json
@@ -112,6 +112,7 @@
         "role": "Role",
         "image": "Avatar",
         "save": "Save information",
+        "action": "Action",
         "upload-image":"Upload image"
     }
 }
