--- a/Frontend/src/translations/vi.json
+++ b/Frontend/src/translations/vi.json
@@ -111,6 +111,7 @@
         "role": "Vai trò",
         "image": "Ảnh đại diện",
         "save": "Lưu thông tin",
+        "action": "Chức năng",
         "upload-image":"Tải ảnh"
     }
 }
