--- a/Frontend/src/translations/en.json
+++ b/Frontend/src/translations/en.json
@@ -13,7 +13,7 @@
 
     },
     "banner":{
-        "tittle-1": "MEDICAL BACKGROUND",
+        "tittle-1": "MEDICAL PLATFORM",
         "tittle-2": "COMPREHENSIVE HEALTH CARE",
         "child-1": "Specialized examination",
         "child-2": "Remote examination",
