--- a/Frontend/src/translations/vi.json
+++ b/Frontend/src/translations/vi.json
@@ -46,22 +46,8 @@
     },
     "doctor":{
         "tittle": "Bác sĩ nổi bật",
-        "name_1": "Bác sĩ chuyên khoa Trần Minh Khuyên",
-        "sub_1": "Sức khỏe tâm thần, tư vấn, trị liệu tâm lí",
-        "name_2": "Phó Giáo sư, Tiến sĩ Bác sĩ Nguyễn Thi Hùng",
-        "sub_2": "Thần kinh",
-        "name_3": "Bác sĩ cao cấp Nguyễn Duy Hưng",
-        "sub_3": "Da liễu",
-        "name_4": "Thạc sĩ Bác Sĩ Nguyễn Thi Phú",
-        "sub_4": "Sức khỏe tâm thần",
-        "name_5": "Bác sĩ chuyên khoa I Lâm Thùy Nga",
-        "sub_5": "Thần kinh",
-        "name_6": "Bác sĩ Nguyễn Thị Hoài An",
-        "sub_6": "Tai Mũi Họng, Nhi khoa",
-        "name_7": "Giáo sư, Tiến sĩ Nguyễn Văn Thông",
-        "sub_7": "Thần kinh",
-        "name_8": "Phó Giáo Sư, Tiến sĩ Phạm Văn Tần",
-        "sub_8": "Chuyên khoa Mắt"
+        "information": "Thông tin bác sĩ",
+        "choose": "Chọn bác sĩ"
     },
     "handbook":{
         "title": "Cẩm nang",
@@ -96,7 +82,8 @@
             "specialty": "Chuyên khoa",
             "manage-specialty": "Quản lí chuyên khoa",
             "post": "Bài đăng",
-            "manage-post": "Quản lí bài đăng"
+            "manage-post": "Quản lí bài đăng",
+            "manage-doctor-info": "Quản lí thông tin bác sĩ"
         }
     },
     "user":{
@@ -116,5 +103,8 @@
         "edit": "Lưu thông tin",
         "action": "Chức năng",
         "upload-image":"Tải ảnh"
+    },
+    "system":{
+        "save":"Lưu thông tin"
     }
 }
