Edit information of doctor

--- a/Frontend/src/translations/en.json
+++ b/Frontend/src/translations/en.json
@@ -106,6 +106,7 @@
         "upload-image":"Upload image"
     },
     "system":{
-        "save":"Save"
+        "save":"Save",
+        "create": "Create"
     }
 }
