--- a/Frontend/src/translations/vi.json
+++ b/Frontend/src/translations/vi.json
@@ -105,6 +105,7 @@
         "upload-image":"Tải ảnh"
     },
     "system":{
-        "save":"Lưu thông tin"
+        "save":"Lưu thông tin",
+        "create": "Tạo thông tin"
     }
 }
