View detail doctor

--- a/Frontend/src/translations/en.json
+++ b/Frontend/src/translations/en.json
@@ -76,8 +76,8 @@
             "manage-user": "User",
             "manage-doctor": "Manage Doctor",
             "manage-admin":"Manage Admin",
-            "crud": "User CRUD",
-            "crud-redux": "User CRUD Redux",
+            "crud": "CRUD",
+            "crud-redux": "Manage User",
             "clinic": "Clinic",
             "manage-clinic": "Manage Clinic",
             "specialty": "Specialty",
