--- a/Frontend/src/translations/vi.json
+++ b/Frontend/src/translations/vi.json
@@ -75,8 +75,8 @@
             "manage-user": "Người dùng",
             "manage-doctor": "Quản lý bác sĩ",
             "manage-admin":"Quản lí Admin",
-            "crud": "Người dùng CRUD",
-            "crud-redux": "Người dùng CRUD Redux",
+            "crud": "CRUD",
+            "crud-redux": "Quản lí người dùng",
             "clinic": "Phòng khám",
             "manage-clinic": "Quản lí phòng khám",
             "specialty": "Chuyên khoa",
