Login check auth

--- a/Frontend/src/translations/en.json
+++ b/Frontend/src/translations/en.json
@@ -85,6 +85,9 @@
             "post": "Post",
             "manage-post": "Manage Post",
             "manage-doctor-info": "Manage Doctor's Information"
+        },
+        "doctor":{
+            "schedule": "Manage Schedule"
         }
     },
     "user":{
